More edits to proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -84,7 +84,7 @@ My research goal is to advance methodology that jointly addresses these two issu
 
 \noindent
 \textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-non-dynamic setting. Building upon this foundation, I will work to embed this core methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Surjanovic, Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
+non-dynamic setting, and then generalize to embed this methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
 
  \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty, extending existing theory [cite] and developing novel algorithms for propagating GP uncertainty. To incorporate the predictive GP correlation structure, I will leverage the correlation between the GP prediction at current and proposed parameter values in Metropolis-Hastings MCMC algorithms. 
  
