--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -86,30 +86,20 @@ My research goal is to advance methodology that jointly addresses these two issu
 \textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
 non-dynamic setting, then generalize to embed this methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
 
- \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty, extending existing theory [cite] and developing novel algorithms for propagating GP uncertainty. Specifically, I will leverage the correlation structure in emulator predictions encoded by $k(\cdot, \cdot)$ between current and proposed parameter values in Metropolis-Hastings type MCMC algorithms. To accomplish this, I will generalize an existing re-sampling method \cite{Fer} as well as consider analytic approaches that involve integrating the GP out of the likelihood to average over emulator uncertainty. 
+ \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty, extending existing theory \cite{Tuo} and developing novel algorithms for propagating GP uncertainty. Specifically, I will leverage the correlation structure in emulator predictions encoded by $k(\cdot, \cdot)$ between current and proposed parameter values in Metropolis-Hastings type MCMC algorithms. To accomplish this, I will generalize an existing re-sampling method \cite{Fer} as well as consider analytic approaches that involve integrating the GP out of the likelihood to average over emulator uncertainty. 
 I will then extend these ideas to error models for simulators with time-indexed output, a common feature in scientific applications. I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
  approximations and (ii.) directly emulating the likelihood (instead of $f$) under an auto-regressive error model to reduce back to univariate outputs \cite{Fer}. 
  %My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
  %\textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. 
 
- \textbf{2. Spatiotemporal Dynamics.}
- The next phase of my proposal involves embedding computer simulations within a spatiotemporal statistical model, while continuing to build upon the uncertainty quantification methods detailed above. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore a linear Markovian model for $\theta$, and analyze combinations of spatial basis function approaches with smoothing GP priors to obtain tractable simulation-based spatiotemporal models. 
+ \textbf{2. Spatiotemporal Dynamics.} I will next embed the emulator framework within a spatiotemporal statistical model, building upon my previous work to ensure a holistic accounting of uncertainties. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore a linear Markovian model for $\theta$, and analyze combinations of spatial basis function approaches with smoothing GP priors to obtain tractable simulation-based spatiotemporal models. 
 These extensions yield high-dimensional hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my GP emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of GP prediction. To deal with this I will adopt a well-known parallelizable local GP approximation \cite{Gramacy}, making adjustments to correctly propagate the additional approximation uncertainty. 
 
 \noindent
 \textbf{Intellectual Merit.} This research will produce broadly applicable Bayesian methodology for the statistical analysis of computer models using extensive spatiotemporal datasets. It will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. Moreover, it will integrate recent advances in dynamic spatiotemporal modeling with computer modeling methodology, addressing current computational bottlenecks in large-scale simulation-based inference.
 
 \noindent
-\textbf{Broader Impacts.} All methodological developments will be implemented in open-source, well-documented software packages, intended for use across a wide array of scientific disciplines. These packages will also be integrated in the \textit{Predictive Ecosystem Analyzer}, an open-source software tool that allows researchers and land managers to work with ecological models and observational data \cite{Fer}. This has the potential to drastically accelerate the pace of ecological model development, which plays a pivotal role in the management of national forests and public lands, and projections of climate change impacts. Through my collaboration with Michael Dietze, director of the Ecological Forecasting Initiative, I will also participate in an existing Sloan Foundation supported partnership that serves three minority-serving institutions with large tribal populations (Salish-Kootenai College, Cal Poly Humboldt, U. New Mexico-Gallup). I will support culturally-sensitive training in environmental data science as an online mentor, working with undergraduates in the program and helping them pursue other research opportunities, such as REUs. 
-
-
-\section{Stuff to move to broader impacts or intellectual merit}
-\begin{itemize}
-\item For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}.
-\item For example, terrestrial carbon models are typically calibrated independently at different ecological data collection sites \cite{Fer2}.
-\item Large-scale, multi-site parameter calibration has the potential to drastically increase the generalizability of carbon models and improve spatiotemporally-informed decision making. 
-\item 
-\end{itemize}
+\textbf{Broader Impacts.} All methodological developments will be implemented in open-source, well-documented software packages, intended for use across a wide array of scientific disciplines. These packages will also be integrated in the \textit{Predictive Ecosystem Analyzer}, an open-source software tool that allows researchers and land managers to work with ecological models and observational data \cite{Fer}. This has the potential to drastically accelerate the pace of ecological model development, which plays a pivotal role in the management of national forests and public lands, and projections of climate change impacts. Through my collaboration with Michael Dietze, director of the Ecological Forecasting Initiative, I will also participate in an existing Sloan Foundation supported partnership that serves three minority-serving institutions with large tribal populations (Salish-Kootenai College, Cal Poly Humboldt, U. New Mexico-Gallup). I will support culturally-sensitive training in environmental data science as an online mentor, working with undergraduates in the program and helping them pursue further research opportunities, such as REUs. 
 
 \begin{thebibliography}{20}
 \bibitem{Willcox} Willcox, K.E., Ghattas, O. \& Heimbach, P. The imperative of physics-based modeling and inverse theory in computational science. Nat Comput Sci 1, 166–168 (2021). https://doi.org/10.1038/s43588-021-00040-z
