--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -73,7 +73,7 @@ significant challenges, requiring tradeoffs between realism and computational an
 Complex processes are commonly analyzed using a computer model (i.e. simulator) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a computer model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere, which requires specifying values for unknown parameters like the soil respiration rate \cite{Fer}.
-A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In physical applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long runtime of the simulator $f$, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
+A Bayesian statistical formulation is typically employed to estimate (i.e. calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In physical applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long simulator runtimes, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on thrifty alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
 My research goal is to advance methodology that jointly addresses these two issues, enabling accurate emulator-based inference for complex spatiotemporal systems. 
 
 % Uncertainty quantification is further complicated when spatiotemporal dynamics are included. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. 
@@ -84,7 +84,7 @@ My research goal is to advance methodology that jointly addresses these two issu
 
 \noindent
 \textbf{Research Plan.} To address these challenges, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-non-dynamic setting, then generalize to embed this methodology in a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
+non-dynamic setting, then generalize to a dynamic spatiotemporal statistical model. I will validate these methods on benchmark problems in scientific machine learning provided by the recent \textit{PDEBench} initiative \cite{Takamoto}, as well as terrestrial carbon models actively used in ecological forecasts \cite{Dietze}. This work is collaborative in nature, co-advised by Jonathan Huggins, an expert in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
 
  \textbf{1. Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty, extending existing theory \cite{Tuo} and developing novel algorithms for propagating GP uncertainty. Specifically, I will leverage the correlation structure in emulator predictions encoded by $k(\cdot, \cdot)$ between current and proposed parameter values in Metropolis-Hastings type MCMC algorithms. To accomplish this, I will generalize an existing re-sampling method \cite{Fer} as well as consider analytic approaches that involve integrating the GP out of the likelihood to average over emulator uncertainty. 
 I will then extend these ideas to error models for simulators with time-indexed output, a common feature in scientific applications. I will analyze two approaches: (i.) reducing the dimensionality of the output via basis-function 
