Started working on shortening references

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -102,14 +102,13 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \textbf{Broader Impacts.} All methodological developments will be implemented in open-source, well-documented software packages, intended for use across a wide array of scientific disciplines. These packages will also be integrated in the \textit{Predictive Ecosystem Analyzer}, an open-source software tool that allows researchers and land managers to work with ecological models and observational data \cite{Fer}. This has the potential to drastically accelerate the pace of ecological model development, which plays a pivotal role in the management of national forests and public lands, and projections of climate change impacts. Through my collaboration with Michael Dietze, director of the Ecological Forecasting Initiative, I will also participate in an existing Sloan Foundation supported partnership that serves three minority-serving institutions with large tribal populations (Salish-Kootenai College, Cal Poly Humboldt, U. New Mexico-Gallup). I will support culturally-sensitive training in environmental data science as an online mentor, working with undergraduates in the program and helping them pursue further research opportunities, such as REUs. 
 
 \begin{thebibliography}{20}
-\bibitem{Willcox} Willcox, K.E., Ghattas, O. \& Heimbach, P. The imperative of physics-based modeling and inverse theory in computational science. Nat Comput Sci 1, 166–168 (2021). https://doi.org/10.1038/s43588-021-00040-z
-\bibitem{Laubmeier} Laubmeier et al. Ecological Dynamics: Integrating Empirical, Statistical, and Analytical Methods. Trends Ecol Evol. 2020 Dec;35(12):1090-1099. doi: 10.1016/j.tree.2020.08.006. Epub 2020 Sep 12. PMID: 32933777.
-\bibitem{Wikle} Wikle, C.K. (2015), Modern perspectives on statistics for spatio-temporal data. WIREs Comput Stat, 7: 86-98. https://doi.org/10.1002/wics.1341
-\bibitem{Canadell} Canadell et al, 2021: Global Carbon and
-other Biogeochemical Cycles and Feedbacks. In Climate Change 2021: The Physical Science Basis. Contribution of
-Working Group I to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change. Cambridge University Press,
-Cambridge, United Kingdom and New York, NY, USA, pp. 673–816, doi:10.1017/9781009157896.007.
-\bibitem{Swallow} Swallow et al, Challenges in estimation, uncertainty quantification and elicitation for pandemic modelling, Epidemics, Volume 38, 2022, 100547, ISSN 1755-4365, https://doi.org/10.1016/j.epidem.2022.100547.
+\bibitem{Willcox} Willcox, K.E. et al. Nat Comput Sci 1 2021, 166–168.
+\bibitem{Laubmeier} Laubmeier, A. et al. Trends Ecol Evol 2020, 35(12):1090-1099.
+\bibitem{Wikle} Wikle, C.K.,  WIREs Comput Stat 2015, 7: 86-98.
+\bibitem{Canadell} Canadell, P. et al, In Climate Change 2021: The Physical Science Basis. IPCC, pp. 673–816.
+\bibitem{Swallow} Swallow, B. et al, Epidemics 2022, Volume 38, 100547, ISSN 1755-4365.
+
+
 \bibitem{Baker} Baker et al. "Analyzing Stochastic Computer Models: A Review with Opportunities." Statist. Sci. 37 (1) 64 - 89, February 2022. https://doi.org/10.1214/21-STS822
 \bibitem{Fer} Fer, I., Kelly, R., Moorcroft, P. R., Richardson, A. D., Cowdery, E. M., and Dietze, M. C.: Linking big models to big data: efficient ecosystem model calibration through Bayesian model emulation, Biogeosciences, 15, 5801–5830, https://doi.org/10.5194/bg-15-5801-2018, 2018.
 \bibitem{Kennedy} Kennedy, M.C. and O'Hagan, A. (2001), Bayesian calibration of computer models. Journal of the Royal Statistical Society: Series B (Statistical Methodology), 63: 425-464. https://doi.org/10.1111/1467-9868.00294
