Progress shortening references

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -107,15 +107,13 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \bibitem{Wikle} Wikle, C.K.,  WIREs Comput Stat 2015, 7: 86-98.
 \bibitem{Canadell} Canadell, P. et al, In Climate Change 2021: The Physical Science Basis. IPCC, pp. 673–816.
 \bibitem{Swallow} Swallow, B. et al, Epidemics 2022, Volume 38, 100547, ISSN 1755-4365.
+\bibitem{Baker} Baker, E. et al. Statist. Sci. 2022, 37 (1) 64 - 89.
+\bibitem{Fer} Fer, I. et al, Biogeosciences 2018, 15, 5801–5830.
+\bibitem{Kennedy} Kennedy, M.C. and O'Hagan, A., Journal of the Royal Statistical Society: Series B 2001, 63: 425-464.
+\bibitem{Stuart} Stuart, A. M., Acta Numerica 2010, 19, 451-559. 
+\bibitem{Cleary} Cleary, E. et al, Journal of Computational Physics 2021, Volume 424, 109716, ISSN 0021-9991.
+\bibitem{Fadikar} Fadikar, A. et al, SIAM/ASA Journal on Uncertainty Quantification 2018, Vol 6, 4, 1685-1706.
 
-
-\bibitem{Baker} Baker et al. "Analyzing Stochastic Computer Models: A Review with Opportunities." Statist. Sci. 37 (1) 64 - 89, February 2022. https://doi.org/10.1214/21-STS822
-\bibitem{Fer} Fer, I., Kelly, R., Moorcroft, P. R., Richardson, A. D., Cowdery, E. M., and Dietze, M. C.: Linking big models to big data: efficient ecosystem model calibration through Bayesian model emulation, Biogeosciences, 15, 5801–5830, https://doi.org/10.5194/bg-15-5801-2018, 2018.
-\bibitem{Kennedy} Kennedy, M.C. and O'Hagan, A. (2001), Bayesian calibration of computer models. Journal of the Royal Statistical Society: Series B (Statistical Methodology), 63: 425-464. https://doi.org/10.1111/1467-9868.00294
-\bibitem{Stuart} A. M. Stuart (2010). Inverse problems: A Bayesian perspective. Acta Numerica, 19, pp 451-559 doi:10.1017/
-S0962492910000061.
-\bibitem{Cleary} Emmet Cleary, Alfredo Garbuno-Inigo, Shiwei Lan, Tapio Schneider, Andrew M. Stuart, “Calibrate, emulate, sample”, Journal of Computational Physics, Volume 424, 2021, 109716, ISSN 0021-9991, https://doi.org/10.1016/j.jcp.2020.109716.
-\bibitem{Fadikar} Fadikar et al, Calibrating a Stochastic, Agent-Based Model Using Quantile-Based Emulation. SIAM/ASA Journal on Uncertainty Quantification. https://doi.org/10.1137/17M1161233.
 \bibitem{Sun} Sun et al, Synthesizing simulation and field data of solar irradiance. Stat Anal Data Min: The ASA Data Sci Journal. 2019; 12: 311– 324. https://doi.org/10.1002/sam.11414
 \bibitem{Surjanovic} Surjanovic et al, Virtual Library of Simulation Experiments: Test Functions and Datasets.
 \bibitem{Takamoto} Takamoto et al, PDEBench: An Extensive Benchmark for Scientific Machine Learning. Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track
