Shorted reference citations

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -113,17 +113,20 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \bibitem{Stuart} Stuart, A. M., Acta Numerica 2010, 19, 451-559. 
 \bibitem{Cleary} Cleary, E. et al, Journal of Computational Physics 2021, Volume 424, 109716, ISSN 0021-9991.
 \bibitem{Fadikar} Fadikar, A. et al, SIAM/ASA Journal on Uncertainty Quantification 2018, Vol 6, 4, 1685-1706.
+\bibitem{Sun} Sun, F. et al, Stat Anal Data Min: The ASA Data Sci Journal 2019. 12: 311– 324. 
+\bibitem{Surjanovic} Surjanovic, S. et al, Virtual Library of Simulation Experiments: Test Functions and Datasets.
+\bibitem{Takamoto} Takamoto, M. et al, Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track 2022.
+\bibitem{Dietze} Dietze, M. et al, Proceedings of the National Academy of Sciences 2018.115,7, 1424-1432.
+\bibitem{Tuo} Tuo, R. et al. SIAM/ASA Journal on Uncertainty Quantification 2016. Journal Volume: 4; Journal Issue: 1; Journal ID: ISSN 2166-2525.
+\bibitem{Sarkka} Särkkä, S. Bayesian Filtering and Smoothing. 2013. Cambridge: Cambridge University Press.
+\bibitem{Hefley} Hefley, T.J. et al. Spatial Statistics 2017. 20: 206-220.
+\bibitem{Park} Park, J. et al. Statistics and Computing 2020. 30:1497–1522.
+\bibitem{Gramacy} Gramacy R. et al. Journal of Computational and Graphical Statistics 2015, 24;2: 561-578.
+\bibitem{Fer2} Fer, I. et al. bioRxiv 2021; doi: https://doi.org/10.1101/2021.04.28.441243. 
 
-\bibitem{Sun} Sun et al, Synthesizing simulation and field data of solar irradiance. Stat Anal Data Min: The ASA Data Sci Journal. 2019; 12: 311– 324. https://doi.org/10.1002/sam.11414
-\bibitem{Surjanovic} Surjanovic et al, Virtual Library of Simulation Experiments: Test Functions and Datasets.
-\bibitem{Takamoto} Takamoto et al, PDEBench: An Extensive Benchmark for Scientific Machine Learning. Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track
-\bibitem{Dietze} Dietze et al, “Iterative near-term ecological forecasting: Needs, opportunities, and challenges”, Proceedings of the National Academy of Sciences, 115, 7, 1424-1432, 2018.
-\bibitem{Tuo} Tuo et al, A theoretical framework for calibration in computer models: parametrization, estimation and convergence properties. 
-\bibitem{Sarkka} Särkkä, S. (2013). Bayesian Filtering and Smoothing (Institute of Mathematical Statistics Textbooks). Cambridge: Cambridge University Press. doi:10.1017/CBO9781139344203
-\bibitem{Hefley} Trevor J. Hefley, Mevin B. Hooten, Ephraim M. Hanks, Robin E. Russell, Daniel P. Walsh, Dynamic spatio-temporal models for spatial data, Spatial Statistics.
-\bibitem{Park} Park et al, Inference on high-dimensional implicit dynamic models using a guided intermediate resampling filter.
-\bibitem{Gramacy} Gramacy et al, Local Gaussian process approximation for large computer experiments, 2013.
-\bibitem{Fer2} Istem Fer, Alexey Shiklomanov, Kimberly A. Novick, Christopher M. Gough, M. Altaf Arain, Jiquan Chen, Bailey Murphy, Ankur R. Desai, Michael C. Dietze: Capturing site-to-site variability through Hierarchical Bayesian calibration of a process-based dynamic vegetation model, bioRxiv 2021.04.28.441243; doi: https://doi.org/10.1101/2021.04.28.441243. 
+
+
+
 
 \end{thebibliography}
 
