Edits to intro paragraph for NSF proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -60,12 +60,14 @@
 Scalable Emulator-Based Bayesian Methods for Scientific Machine Learning
 \end{center}
 
-The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
- Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
-climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of calibrating these models with noisy real-world data continues to present
-significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing
- evidence-based policy, it is essential to develop methods to handle more complex models while simultaneously providing a full accounting of uncertainties.
- My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
+Computer models take advantage of existing scientific knowledge and are invaluable for tackling a wide range of problems. However, unknown model parameters and biases due to model limitations need to be addressed by incorporating statistical and machine learning methods. Given the ubiquity of computer models in informing evidence-based policy, it is essential to develop scalable methods to address these problems while simultaneously providing a full accounting of uncertainties. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
+
+% The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
+ % Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
+% climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of calibrating these models with noisy real-world data continues to present
+% significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing
+ % evidence-based policy, it is essential to develop methods to handle more complex models while simultaneously providing a full accounting of uncertainties.
+ % My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
  % Recent calls have highlighted the need to bring together state-of-the-art computational methods with modern statistical 
 %  and machine learning models in order to address these problems \cite{Wikle, Baker}.
 % Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Wikle}.
