More edits to NSF proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -75,7 +75,7 @@ Computer models take advantage of existing scientific knowledge and are invaluab
 Complex processes are commonly analyzed using a computer model (i.e., simulator) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a computer model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere, which requires specifying values for unknown parameters like the soil respiration rate \cite{Fer}.
-A Bayesian statistical formulation is typically employed to estimate (i.e., calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In scientific applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long simulator runtimes, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on simplified alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
+A Bayesian statistical formulation is typically employed to estimate (i.e., calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In scientific applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long simulator runtimes, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$, where $m$ and $k$ are the mean and covariance functions, respectively, learned from a small number of model runs \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on simplified alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
 My research goal is to advance methodology that jointly addresses these two issues, enabling accurate emulator-based inference for complex spatiotemporal systems. 
 
 % Uncertainty quantification is further complicated when spatiotemporal dynamics are included. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. 
