nsf_proposal.tex

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -60,7 +60,7 @@
 Scalable Emulator-Based Bayesian Methods for Scientific Machine Learning
 \end{center}
 
-Computer models take advantage of existing scientific knowledge and are invaluable for tackling a wide range of problems. However, unknown model parameters and biases due to model limitations need to be addressed by incorporating statistical and machine learning methods. The task of calibrating the parameters of these models with noisy real-world data continues to present significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing evidence-based policy, it is essential to address these problems while simultaneously providing a full accounting of uncertainties. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
+Computer models take advantage of existing scientific knowledge and are invaluable for tackling a wide range of problems. However, unknown model parameters and biases due to model limitations need to be addressed by incorporating statistical and machine learning methods. The task of using noisy real-world data to solve these problems continues to present significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing evidence-based policy, it is essential to address these problems while simultaneously providing a full accounting of uncertainties. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
 
 % The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
  % Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
